--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".feature.welcome.splash.view.SplashActivity">
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/splash_lottie_loading"
+        android:layout_width="260dp"
+        android:layout_height="360dp"
+        app:lottie_rawRes="@raw/lottie_loading"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        />
     <TextView
+        android:layout_marginTop="10dp"
+        android:id="@+id/splash_tv"
         android:layout_width="wrap_content"
+        android:textSize="24sp"
+        android:textStyle="bold"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/app_text"
+        android:gravity="center"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
