--- a/app/src/main/res/layout/activity_launch.xml
+++ b/app/src/main/res/layout/activity_launch.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginHorizontal="8dp"
     tools:context=".feature.welcome.launch.view.LaunchActivity">
 
     <ImageView
@@ -14,47 +15,67 @@
         android:layout_marginTop="100dp"
         android:scaleType="fitCenter"
         android:src="@drawable/logo"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        />
     <TextView
         android:id="@+id/launch_tv_title"
+        style="@style/LargeTitleTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/fit_text"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/launch_logo"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/launch_logo" />
+
     <Button
         android:id="@+id/launch_btn_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sign_email_text"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/launch_tv_title"
-        app:layout_constraintStart_toStartOf="parent"
         android:drawableLeft="@drawable/ic_email"
+        android:text="@string/sign_email_text"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginHorizontal="8dp"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/launch_tv_title" />
+
     <Button
         android:id="@+id/launch_btn_google"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/sign_google_text"
-        android:drawableLeft="@drawable/ic_email"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/launch_btn_email"
-        app:layout_constraintStart_toStartOf="parent"
+        android:drawableLeft="@drawable/google"
+        android:text="@string/sign_google_text"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginHorizontal="8dp"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/launch_btn_email" />
+
+    <TextView
+        android:id="@+id/not_have_account"
+        style="@style/MediumTitleTextStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="8dp"
+        android:text="Don't have an account?"
+        app:layout_constraintEnd_toStartOf="@+id/tv_create_account"
+        app:layout_constraintStart_toStartOf="@id/main"
+        app:layout_constraintTop_toBottomOf="@+id/launch_btn_google" />
+
+    <TextView
+        android:id="@+id/tv_create_account"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
+        android:text="create account"
+        android:textColor="@color/design_default_color_primary"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/main"
+        app:layout_constraintStart_toEndOf="@+id/not_have_account"
+        app:layout_constraintTop_toBottomOf="@+id/launch_btn_google" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
