--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="8dp"
-    tools:context=".feature.auth.LoginActivity">
+    tools:context=".feature.auth.login.LoginActivity">
     <ImageView
         android:id="@+id/login_logo"
         android:layout_width="180dp"
