--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,4 +18,13 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <!--Button style-->
+    <style name="MyButtonStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">60dp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:buttonStyle">@drawable/button_shape</item>
+    </style>
+
 </resources>
