--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingHorizontal="8dp"
-    tools:context=".feature.auth.login.LoginActivity">
+    tools:context=".RegisterFragment">
 
     <ImageView
-        android:id="@+id/login_logo"
+        android:id="@+id/register_logo"
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:layout_marginTop="100dp"
@@ -20,19 +21,31 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/login_et_email"
+        android:id="@+id/register_et_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:background="@drawable/shape_border"
+        android:drawableLeft="@drawable/ic_username"
+        android:drawablePadding="6dp"
+        android:drawableTint="@color/design_default_color_primary"
+        android:hint="username"
+        app:layout_constraintTop_toBottomOf="@+id/register_logo" />
+
+    <EditText
+        android:id="@+id/register_et_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/shape_border"
         android:drawableLeft="@drawable/ic_email"
         android:drawablePadding="6dp"
         android:drawableTint="@color/design_default_color_primary"
-        android:hint="enter your email"
-        app:layout_constraintTop_toBottomOf="@+id/login_logo" />
+        android:hint="email"
+        app:layout_constraintTop_toBottomOf="@+id/register_et_username" />
 
     <EditText
-        android:id="@+id/login_et_password"
+        android:id="@+id/register_et_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -40,30 +53,20 @@
         android:drawableLeft="@drawable/password"
         android:drawablePadding="6dp"
         android:drawableTint="@color/design_default_color_primary"
-        android:hint="enter your password"
+        android:hint="password"
         android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@+id/login_et_email" />
-
-    <TextView
-        android:id="@+id/login_et_forgot"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="3dp"
-        android:gravity="right"
-        android:text="Forgot password?"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_et_password" />
+        app:layout_constraintTop_toBottomOf="@+id/register_et_email" />
 
     <Button
+        android:id="@+id/register_btn_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="60dp"
-        android:text="Log in"
+        android:text="Next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_et_forgot"
+        app:layout_constraintTop_toBottomOf="@+id/register_et_password"
         app:layout_constraintVertical_bias="0.355"
         tools:layout_editor_absoluteX="0dp" />
 
