The project was converted into a single activity structure.

--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -2,12 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="8dp"
-    tools:context=".feature.auth.forgot_password.ForgotPasswordActivity">
-
+    tools:context=".feature.auth.forgot_password.ForgotPasswordFragment">
 
     <ImageView
         android:id="@+id/forgot_logo"
@@ -16,6 +14,7 @@
         android:layout_marginTop="100dp"
         android:scaleType="fitCenter"
         android:src="@drawable/logo"
+        app:layout_constraintBottom_toTopOf="@+id/forgot_tv_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +25,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:padding="8dp"
         android:text="Forgot Password?"
+        app:layout_constraintBottom_toTopOf="@+id/forgot_tv_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgot_logo" />
@@ -41,6 +42,7 @@
         android:text="Enter the email address associated with your account"
         android:textSize="16dp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/forgot_et_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgot_tv_title" />
@@ -55,25 +57,20 @@
         android:drawablePadding="6dp"
         android:drawableTint="@color/design_default_color_primary"
         android:hint="enter your email"
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toTopOf="@+id/forgot_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgot_tv_description" />
 
     <Button
+        android:id="@+id/forgot_btn"
         style="@style/MyButtonStyle"
-        android:text="Verify Email"
         android:layout_marginTop="24dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:text="Verify Email"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgot_et_email"
         app:layout_constraintVertical_bias="0.181" />
-
-<!--    <Button-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginBottom="60dp"-->
-<!--        android:text="Verify Email"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/forgot_et_email"-->
-<!--        app:layout_constraintVertical_bias="0.181"-->
-<!--        tools:layout_editor_absoluteX="0dp" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
