--- a/app/src/main/res/layout/fragment_launch.xml
+++ b/app/src/main/res/layout/fragment_launch.xml
@@ -2,11 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="8dp"
-    tools:context=".feature.welcome.launch.view.LaunchActivity">
+    tools:context=".feature.welcome.launch.view.LaunchFragment">
 
     <ImageView
         android:id="@+id/launch_logo"
@@ -15,6 +14,7 @@
         android:layout_marginTop="100dp"
         android:scaleType="fitCenter"
         android:src="@drawable/logo"
+        app:layout_constraintBottom_toTopOf="@+id/launch_tv_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -60,25 +60,23 @@
         style="@style/MediumTitleTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="5dp"
         android:text="Don't have an account?"
         app:layout_constraintEnd_toStartOf="@+id/launch_tv_create_account"
-        app:layout_constraintStart_toStartOf="@id/main"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/launch_btn_google" />
 
     <TextView
         android:id="@+id/launch_tv_create_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="4dp"
+        android:layout_marginTop="4dp"
         android:text="create account"
         android:textColor="@color/design_default_color_primary"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@id/main"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/launch_not_have_account"
         app:layout_constraintTop_toBottomOf="@+id/launch_btn_google" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
