--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,79 +2,95 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/register_nav_graph"
-    app:startDestination="@id/registerFragment">
-
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/splashFragment">
+    <fragment
+        android:id="@+id/splashFragment"
+        android:name="com.example.fitnessapp.feature.welcome.splash.view.SplashFragment"
+        android:label="fragment_splash"
+        tools:layout="@layout/fragment_splash">
+        <action
+            android:id="@+id/action_splashFragment_to_launchFragment"
+            app:destination="@id/launchFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/launchFragment"
+        android:name="com.example.fitnessapp.feature.welcome.launch.view.LaunchFragment"
+        android:label="fragment_launch"
+        tools:layout="@layout/fragment_launch">
+        <action
+            android:id="@+id/action_launchFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_launchFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.fitnessapp.feature.auth.login.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login">
+        <action
+            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
+            app:destination="@id/forgotPasswordFragment" />
+    </fragment>
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.example.fitnessapp.feature.auth.register.view.RegisterFragment"
         android:label="fragment_register"
-        tools:layout="@layout/fragment_register" >
+        tools:layout="@layout/fragment_register">
         <action
             android:id="@+id/action_registerFragment_to_genderFragment"
             app:destination="@id/genderFragment" />
     </fragment>
     <fragment
+        android:id="@+id/forgotPasswordFragment"
+        android:name="com.example.fitnessapp.feature.auth.forgot_password.ForgotPasswordFragment"
+        android:label="fragment_forgot_password"
+        tools:layout="@layout/fragment_forgot_password" />
+    <fragment
         android:id="@+id/genderFragment"
         android:name="com.example.fitnessapp.feature.auth.gender.view.GenderFragment"
         android:label="fragment_gender"
-        tools:layout="@layout/fragment_gender" >
+        tools:layout="@layout/fragment_gender">
         <action
             android:id="@+id/action_genderFragment_to_birthDateFragment"
             app:destination="@id/birthDateFragment" />
-        <action
-            android:id="@+id/action_genderFragment_to_registerFragment"
-            app:destination="@id/registerFragment" />
     </fragment>
     <fragment
         android:id="@+id/birthDateFragment"
         android:name="com.example.fitnessapp.feature.auth.birth_date.view.BirthDateFragment"
         android:label="fragment_birth_date"
-        tools:layout="@layout/fragment_birth_date" >
+        tools:layout="@layout/fragment_birth_date">
         <action
             android:id="@+id/action_birthDateFragment_to_mobilityFragment"
-            app:destination="@id/mobilityFragment" />
-        <action
-            android:id="@+id/action_birthDateFragment_to_genderFragment"
-            app:destination="@id/genderFragment" />
-        <action
-            android:id="@+id/action_birthDateFragment_to_mobilityFragment2"
             app:destination="@id/mobilityFragment" />
     </fragment>
     <fragment
         android:id="@+id/mobilityFragment"
         android:name="com.example.fitnessapp.feature.auth.mobility.view.MobilityFragment"
         android:label="fragment_mobility"
-        tools:layout="@layout/fragment_mobility" >
+        tools:layout="@layout/fragment_mobility">
         <action
             android:id="@+id/action_mobilityFragment_to_heightFragment"
             app:destination="@id/heightFragment" />
-        <action
-            android:id="@+id/action_mobilityFragment_to_heightFragment2"
-            app:destination="@id/heightFragment" />
-        <action
-            android:id="@+id/action_mobilityFragment_to_birthDateFragment"
-            app:destination="@id/birthDateFragment" />
     </fragment>
     <fragment
         android:id="@+id/heightFragment"
         android:name="com.example.fitnessapp.feature.auth.height.view.HeightFragment"
         android:label="fragment_height"
-        tools:layout="@layout/fragment_height" >
+        tools:layout="@layout/fragment_height">
         <action
             android:id="@+id/action_heightFragment_to_weightFragment"
             app:destination="@id/weightFragment" />
-        <action
-            android:id="@+id/action_heightFragment_to_mobilityFragment"
-            app:destination="@id/mobilityFragment" />
     </fragment>
     <fragment
         android:id="@+id/weightFragment"
         android:name="com.example.fitnessapp.feature.auth.weight.view.WeightFragment"
         android:label="fragment_weight"
-        tools:layout="@layout/fragment_weight" >
+        tools:layout="@layout/fragment_weight">
         <action
-            android:id="@+id/action_weightFragment_to_heightFragment"
-            app:destination="@id/heightFragment" />
+            android:id="@+id/action_weightFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
 </navigation>
