--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -29,7 +29,9 @@
         android:drawablePadding="6dp"
         android:drawableTint="@color/design_default_color_primary"
         android:hint="enter your email"
-        app:layout_constraintTop_toBottomOf="@+id/login_logo" />
+        android:minHeight="48dp"
+        app:layout_constraintTop_toBottomOf="@+id/login_logo"
+        tools:layout_editor_absoluteX="8dp" />
 
     <EditText
         android:id="@+id/login_et_password"
@@ -42,7 +44,9 @@
         android:drawableTint="@color/design_default_color_primary"
         android:hint="enter your password"
         android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@+id/login_et_email" />
+        android:minHeight="48dp"
+        app:layout_constraintTop_toBottomOf="@+id/login_et_email"
+        tools:layout_editor_absoluteX="8dp" />
 
     <TextView
         android:id="@+id/login_et_forgot"
