--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -30,6 +29,8 @@
         android:drawablePadding="6dp"
         android:drawableTint="@color/design_default_color_primary"
         android:hint="username"
+        android:maxLines="1"
+        android:minHeight="48dp"
         app:layout_constraintTop_toBottomOf="@+id/register_logo" />
 
     <EditText
@@ -37,11 +38,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+
         android:background="@drawable/shape_border"
         android:drawableLeft="@drawable/ic_email"
         android:drawablePadding="6dp"
         android:drawableTint="@color/design_default_color_primary"
         android:hint="email"
+        android:maxLines="1"
+        android:minHeight="48dp"
         app:layout_constraintTop_toBottomOf="@+id/register_et_username" />
 
     <EditText
@@ -55,7 +59,10 @@
         android:drawableTint="@color/design_default_color_primary"
         android:hint="password"
         android:inputType="textPassword"
-        app:layout_constraintTop_toBottomOf="@+id/register_et_email" />
+        android:maxLines="1"
+        android:minHeight="48dp"
+        app:layout_constraintTop_toBottomOf="@+id/register_et_email"
+        tools:layout_editor_absoluteX="8dp" />
 
     <Button
         android:id="@+id/register_btn_next"
