--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="8dp"
-    tools:context=".feature.auth.forgot_password.ForgotPasswordFragment">
+    tools:context=".feature.auth.forgot_password.view.ForgotPasswordFragment">
 
     <ImageView
         android:id="@+id/forgot_logo"
@@ -63,14 +63,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgot_tv_description" />
 
+
     <Button
         android:id="@+id/forgot_btn"
         style="@style/MyButtonStyle"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:text="Verify Email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/forgot_et_email"
         app:layout_constraintVertical_bias="0.181" />
+
+    <ProgressBar
+        android:id="@+id/forgot_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:progressTint="@color/accent"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/forgot_btn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
