--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -2,12 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/btm_nav_home"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home"
-
         android:title="Home" />
     <item
-        android:id="@+id/btm_nav_profile"
+        android:id="@+id/profileFragment"
         android:icon="@drawable/ic_profile"
         android:title="Profile"
         />
